# lam

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
assets/veval/toy_gt_and_pred/: toy_saco_veval_sav_test_gt.json
benchmarks/: README.md  g6.4xlarge.json
cdk/: .gitignore  README.md  cdk.json  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
cdk/lib/: model-endpoint-stack.ts  network-stack.ts
cdk/lib/constructs/: types.ts
cdk/test/: load-deployment.test.ts  model-endpoint-stack.test.ts  network-stack.test.ts  test-utils.ts
conda/: lam-sagemaker.yml
docker/: Dockerfile.lam-sagemaker  README.md
lam/: __init__.py  __main__.py  cli.py  logger.py  model_builder.py  visualization_utils.py
lam/agent/: __init__.py  agent_core.py  client_llm.py  client_sam3.py  inference.py  viz.py
lam/agent/helpers/: __init__.py  boxes.py  color_map.py  filename_utils.py  keypoints.py  mask_overlap_removal.py  masks.py  memory.py  rle.py  roi_align.py  rotated_boxes.py  som_utils.py  visualizer.py  zoom_in.py
lam/eval/: __init__.py  cgf1_eval.py  coco_eval.py  coco_eval_offline.py  coco_reindex.py  coco_writer.py  conversion_util.py  demo_eval.py  postprocessors.py  saco_veval_eval.py  saco_veval_evaluators.py  ytvis_coco_wrapper.py  ytvis_eval.py
lam/eval/hota_eval_toolkit/: __init__.py  run_ytvis_eval.py
lam/eval/teta_eval_toolkit/: __init__.py  _timing.py  eval.py  utils.py
lam/geospatial/: __init__.py  geojson_io.py  masks.py  merge.py  pipeline.py  raster.py  s3_vsis3.py  tiling.py  viz_geojson.py
lam/hosting/: __init__.py  sagemaker_geojson.py  server_utils.py
lam/model/: __init__.py  act_ckpt_utils.py  box_ops.py  data_misc.py  decoder.py  edt.py  encoder.py  geometry_encoders.py  io_utils.py  maskformer_segmentation.py  memory.py  model_misc.py  necks.py  position_encoding.py  sam1_task_predictor.py  sam3_image.py  sam3_image_processor.py  sam3_tracker_base.py  sam3_tracker_utils.py  sam3_tracking_predictor.py  sam3_video_base.py  sam3_video_inference.py  sam3_video_predictor.py  text_encoder_ve.py  tokenizer_ve.py  vitdet.py  vl_combiner.py
lam/model/utils/: __init__.py  misc.py  sam1_utils.py  sam2_utils.py
lam/perflib/: __init__.py  associate_det_trk.py  compile.py  connected_components.py  fa3.py  masks_ops.py  nms.py
lam/perflib/tests/: tests.py
lam/perflib/triton/: connected_components.py  nms.py
lam/prompt_mask/: __init__.py  common.py  mask_decoder.py  prompt_encoder.py  rope.py  transformer.py
lam/train/: __init__.py  masks_ops.py  matcher.py  nms_helper.py  train.py  trainer.py
lam/train/configs/: eval_base.yaml
lam/train/data/: __init__.py  coco_json_loaders.py  collator.py  sam3_image_dataset.py  sam3_video_dataset.py  serialization_utils.py  torch_dataset.py
lam/train/loss/: __init__.py  loss_fns.py  mask_sampling.py  sam3_loss.py  sigmoid_focal_loss.py
lam/train/optim/: __init__.py  optimizer.py  schedulers.py
scripts/: benchmark_geotiff_cli.py  setup_sagemaker_notebook.sh
tests/: conftest.py
tests/lam/: test___init__.py  test___main__.py  test_cli.py  test_logger.py
(+62 files in other folders)
